--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -51,7 +51,7 @@
             android:layout_marginStart="5dp"
             android:textStyle="bold"
             android:textColor="#fff"
-            android:text="full name" />
+            android:text="@string/full_name" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/fullName_IL"
@@ -66,7 +66,7 @@
                 android:id="@+id/fullName_ET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="enter your name"
+                android:hint="@string/enter_your_name"
                 android:drawableLeft="@drawable/ic_person_black_24dp"
                 android:padding="5dp"
                 android:background="@drawable/edittext_bg"
@@ -95,7 +95,9 @@
             android:layout_marginStart="5dp"
             android:textStyle="bold"
             android:textColor="#fff"
-            android:text="Email        " />
+            android:layout_marginRight="41dp"
+            android:text="@string/email"
+            android:layout_marginEnd="41dp" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/email_IL"
@@ -113,7 +115,7 @@
                 android:padding="5dp"
                 android:drawableLeft="@drawable/ic_email_black_24dp"
                 android:background="@drawable/edittext_bg"
-                android:hint="enter your email address" />
+                android:hint="@string/enter_your_email" />
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
@@ -138,7 +140,9 @@
             android:textColor="#fff"
             android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
-            android:text="password "/>
+            android:layout_marginRight="2dp"
+            android:layout_marginEnd="2dp"
+            android:text="@string/password"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/password_IL"
@@ -156,7 +160,7 @@
                 android:padding="5dp"
                 android:background="@drawable/edittext_bg"
                 android:drawableLeft="@drawable/ic_security_black_24dp"
-                android:hint="enter your password" />
+                android:hint="@string/enter_your_password" />
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
@@ -167,7 +171,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_bg"
-        android:text="SignUp"
+        android:text="@string/signup"
         android:fontFamily="sans-serif-condensed"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
@@ -195,10 +199,12 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="36dp"
             android:layout_marginStart="36dp"
-            android:paddingRight="5dp"
-            android:text="alredy have an account "
+            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
+            android:text="@string/alredy_have_an_account"
             android:textColor="#fff"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+             />
 
         <Button
             android:id="@+id/gotoLogIn_BU"
@@ -206,7 +212,7 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:gravity="start|center_vertical"
-            android:text="Log In"
+            android:text="@string/login"
             android:textColor="#d94255"
             android:textAllCaps="false"
             android:textStyle="bold"
