--- a/app/src/main/res/layout/post_row.xml
+++ b/app/src/main/res/layout/post_row.xml
@@ -34,7 +34,7 @@
                 android:textColor="#616161"
                 app:layout_constraintStart_toEndOf="@+id/postImg_IV"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="Ahmed Khaled"
+                tools:text="@string/ahmedkhaled"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:layout_marginLeft="20dp" />
@@ -48,7 +48,7 @@
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="@+id/postAuthor_TV"
                 app:layout_constraintTop_toBottomOf="@+id/postAuthor_TV"
-                tools:text="this is a sample post " />
+                tools:text="@string/thisisasamplepost" />
 
         </android.support.constraint.ConstraintLayout>
 
