--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -20,9 +20,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="60dp"
         android:fontFamily="casual"
-        android:text="We Chat"
+        android:text="@string/app_name"
         android:textColor="#fff"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:textStyle="bold"
         android:focusableInTouchMode="true"
         android:focusable="true"
@@ -67,10 +67,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/enter_your_name"
-                android:drawableLeft="@drawable/ic_person_black_24dp"
+                android:drawableStart="@drawable/ic_person_black_24dp"
                 android:padding="5dp"
                 android:background="@drawable/edittext_bg"
-                android:textColor="#fff" />
+                android:textColor="#fff"
+                android:drawableLeft="@drawable/ic_person_black_24dp" />
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
@@ -113,9 +114,11 @@
                 android:layout_height="wrap_content"
                 android:textColor="#fff"
                 android:padding="5dp"
-                android:drawableLeft="@drawable/ic_email_black_24dp"
+                android:inputType="textEmailAddress"
+                android:drawableStart="@drawable/ic_email_black_24dp"
                 android:background="@drawable/edittext_bg"
-                android:hint="@string/enter_your_email" />
+                android:hint="@string/enter_your_email"
+                android:drawableLeft="@drawable/ic_email_black_24dp" />
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
@@ -159,8 +162,9 @@
                 android:textColor="#fff"
                 android:padding="5dp"
                 android:background="@drawable/edittext_bg"
-                android:drawableLeft="@drawable/ic_security_black_24dp"
-                android:hint="@string/enter_your_password" />
+                android:drawableStart="@drawable/ic_security_black_24dp"
+                android:hint="@string/enter_your_password"
+                android:drawableLeft="@drawable/ic_security_black_24dp" />
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
