--- a/app/src/main/res/layout/friend_req_row.xml
+++ b/app/src/main/res/layout/friend_req_row.xml
@@ -21,6 +21,7 @@
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:scaleType="fitXY"
+                android:contentDescription="@string/friend_reqiest_sender_image"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:src="@color/colorAccent" />
