--- a/app/src/main/res/layout/posts_frag.xml
+++ b/app/src/main/res/layout/posts_frag.xml
@@ -43,21 +43,21 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/write_a_psost"
                 android:layout_marginTop="8dp"
-                android:paddingRight="10dp"
-                android:layout_marginLeft="10dp"
                 app:layout_constraintEnd_toStartOf="@+id/writePost_BU"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/userImg"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="10dp" />
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp" />
 
             <ImageView
                 android:id="@+id/writePost_BU"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="7dp"
                 android:scaleType="fitXY"
+                android:contentDescription="@string/write_post_button"
                 android:src="@drawable/arrow"
                 app:layout_constraintBottom_toBottomOf="@+id/writePostContent_ET"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +65,8 @@
                 app:layout_constraintStart_toEndOf="@+id/writePostContent_ET"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0"
-                 />
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
