--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/logOut"
-        android:title="Log Out"
+        android:title="@string/log_out"
         app:showAsAction="always"
         >
 
