--- a/app/src/main/res/layout/posts_frag.xml
+++ b/app/src/main/res/layout/posts_frag.xml
@@ -1,85 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/postFragContaier"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/writePostCardview"
-        >
-
-        <android.support.constraint.ConstraintLayout
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="#fff"
-            android:focusableInTouchMode="true"
-            android:focusable="true"
-            android:padding="5dp">
+            android:layout_height="wrap_content">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/userImg"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/writePostContent_ET"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.24"
-                tools:src="@drawable/ic_launcher_background"
-                android:layout_marginLeft="4dp" />
-
-
-            <EditText
-                android:id="@+id/writePostContent_ET"
-                android:layout_width="0dp"
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/write_a_psost"
-                android:layout_marginTop="8dp"
-                app:layout_constraintEnd_toStartOf="@+id/writePost_BU"
-                app:layout_constraintStart_toEndOf="@+id/userImg"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginEnd="5dp" />
+                android:background="#fff"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
-                android:id="@+id/writePost_BU"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginBottom="7dp"
-                android:scaleType="fitXY"
-                android:contentDescription="@string/write_post_button"
-                android:src="@drawable/arrow"
-                app:layout_constraintBottom_toBottomOf="@+id/writePostContent_ET"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.982"
-                app:layout_constraintStart_toEndOf="@+id/writePostContent_ET"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0"
-                android:layout_marginRight="5dp"
-                android:layout_marginEnd="5dp" />
-        </android.support.constraint.ConstraintLayout>
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/writePostCardview"
+                    >
 
-    </android.support.v7.widget.CardView>
+                    <android.support.constraint.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:background="#fff"
+                        android:focusableInTouchMode="true"
+                        android:focusable="true"
+                        android:padding="5dp">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/userImg"
+                            android:layout_width="65dp"
+                            android:layout_height="65dp"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginTop="8dp"
+                            app:layout_constraintBottom_toBottomOf="@+id/writePostContent_ET"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintVertical_bias="0.24"
+                            tools:src="@drawable/ic_launcher_background"
+                            android:layout_marginLeft="4dp" />
+
+
+                        <EditText
+                            android:id="@+id/writePostContent_ET"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/write_a_psost"
+                            android:layout_marginTop="8dp"
+                            app:layout_constraintEnd_toStartOf="@+id/writePost_BU"
+                            app:layout_constraintStart_toEndOf="@+id/userImg"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginEnd="5dp" />
+
+                        <ImageView
+                            android:id="@+id/writePost_BU"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:scaleType="fitXY"
+                            android:contentDescription="@string/write_post_button"
+                            android:src="@drawable/arrow"
+                            app:layout_constraintLeft_toLeftOf="@+id/writePostContent_ET"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginEnd="5dp" />
+                    </android.support.constraint.ConstraintLayout>
+
+                </android.support.v7.widget.CardView>
+
+            </android.support.design.widget.CollapsingToolbarLayout>
+
+        </android.support.design.widget.AppBarLayout>
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/postsRecycler"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/writePostCardview" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        />
 
-</android.support.constraint.ConstraintLayout>
+
+</android.support.design.widget.CoordinatorLayout>
