--- a/app/src/main/res/layout/post_row.xml
+++ b/app/src/main/res/layout/post_row.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:textColor="#616161"
+                android:textColor="@color/primaryTextColor"
                 app:layout_constraintStart_toEndOf="@+id/postImg_IV"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@string/ahmedkhaled"
