--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginBottom="25dp"
-                android:background="#263238"
+                android:background="@color/colorPrimary"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="@+id/addContainer"
                 app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="15dp"
-                android:textColor="@color/colorAccent"
+                android:textColor="#fff"
                 android:textSize="25dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
