--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1a237e</color>
-    <color name="colorPrimaryDark">#283593</color>
-    <color name="colorAccent">#e91e63</color>
+    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimaryDark">#0288d1</color>
+    <color name="colorAccent">#00BCD4</color>
+    <color name="tabColor">#B3E5FC</color>
+    <color name="primaryTextColor">#212121</color>
+
 </resources>
