--- a/app/src/main/res/layout/posts_frag.xml
+++ b/app/src/main/res/layout/posts_frag.xml
@@ -33,7 +33,7 @@
                         android:padding="5dp">
 
                         <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/userImg"
+                            android:id="@+id/myprofileImg"
                             android:layout_width="65dp"
                             android:layout_height="65dp"
                             android:layout_marginStart="4dp"
@@ -53,7 +53,7 @@
                             android:hint="@string/write_a_psost"
                             android:layout_marginTop="8dp"
                             app:layout_constraintEnd_toStartOf="@+id/writePost_BU"
-                            app:layout_constraintStart_toEndOf="@+id/userImg"
+                            app:layout_constraintStart_toEndOf="@+id/myprofileImg"
                             app:layout_constraintTop_toTopOf="parent"
                             android:layout_marginLeft="10dp"
                             android:layout_marginStart="10dp"
