--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -25,6 +25,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/friendsCardView"
         app:cardUseCompatPadding="true"
         app:cardCornerRadius="5dp"
         app:layout_constraintTop_toBottomOf="@id/friendsLabel"
@@ -39,8 +40,8 @@
             >
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
                 android:id="@+id/findFriends"
                 android:text="Find friends"
                 android:drawableLeft="@drawable/ic_group_add_black_24dp"
@@ -48,6 +49,7 @@
                 android:drawablePadding="10dp"
                 android:textColor="#424242"
                 android:textSize="25sp"
+                android:gravity="center_vertical"
                 android:textAllCaps="false"
                 android:layout_margin="5dp" />
 
@@ -55,12 +57,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="#757575"
-                android:layout_marginTop="5dp"
+
                 android:layout_marginBottom="5dp" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
                 android:id="@+id/friends"
                 android:text="Friends"
                 android:textColor="#424242"
@@ -69,16 +71,54 @@
                 android:drawablePadding="10dp"
                 android:textSize="25sp"
                 android:textAllCaps="false"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="5dp"
+                android:gravity="center_vertical"
                 android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp" />
 
-
-
-
-
         </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Loging"
+        android:id="@+id/logingLabel"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/friendsCardView"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp" />
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/logingCardView"
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="5dp"
+        app:layout_constraintTop_toBottomOf="@id/logingLabel"
+        app:cardElevation="5dp"
+        android:background="#fff">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/logOut"
+            android:text="LogOut"
+            android:background="#fff"
+            android:textColor="#424242"
+            android:drawableStart="@drawable/ic_rowing_black_24dp"
+            android:drawableLeft="@drawable/ic_rowing_black_24dp"
+            android:drawablePadding="10dp"
+            android:textSize="25sp"
+            android:textAllCaps="false"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp" />
 
     </android.support.v7.widget.CardView>
 
