--- a/app/src/main/res/layout/posts_frag.xml
+++ b/app/src/main/res/layout/posts_frag.xml
@@ -66,7 +66,7 @@
                             android:layout_height="25dp"
                             android:scaleType="fitXY"
                             android:contentDescription="@string/write_post_button"
-                            android:src="@drawable/arrow"
+                            android:src="@drawable/ic_send_black_24dp"
                             app:layout_constraintLeft_toLeftOf="@+id/writePostContent_ET"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
