--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -74,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#fff"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/profileName_TV"
@@ -103,15 +103,26 @@
                         android:id="@+id/addFriend_BU"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-
                         android:background="#c62828"
                         android:text="@string/add"
                         android:textAllCaps="false"
                         android:textColor="#fff"
                         android:paddingEnd="5dp"
+                        android:paddingStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginRight="5dp" />
+
+
+                    <Button
+                        android:id="@+id/message_BU"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#c62828"
+                        android:text="message"
+                        android:textAllCaps="false"
+                        android:textColor="#fff"
+                        android:paddingEnd="5dp"
                         android:paddingStart="5dp" />
-
-
 
                 </LinearLayout>
 
