--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,11 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
+
     tools:context="com.ahmdkhled.wechat.activities.ChatActivity">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/chatRecycler"/>
+        android:layout_height="0dp"
+        android:id="@+id/chatRecycler"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/sendMessage_container"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/sendMessage_container"
+        android:orientation="horizontal"
+        android:padding="3dp"
+        android:background="@drawable/chat_send_container_bg"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/writeMessage"
+            android:layout_weight="1"
+            android:background="@null"
+            android:layout_gravity="center_vertical"
+            android:hint=" Write Your message Here"/>
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/sendMessage"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_send_blue_24dp"/>
+
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
