--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,13 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/startChat"
+        android:title="@string/startChat"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_chat_black_24dp"
+        />
+
+    <item
         android:id="@+id/settings"
         android:title="@string/settings"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_settings_black_24dp"
         />
-
-
-
 
 </menu>
