--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#00BCD4</color>
     <color name="tabColor">#B3E5FC</color>
     <color name="primaryTextColor">#212121</color>
+    <color name="sentMessageColor">#0084ff</color>
+    <color name="receivedMessageColor">#eeeeee</color>
 
 </resources>
