--- a/app/src/main/res/layout/received_message_row.xml
+++ b/app/src/main/res/layout/received_message_row.xml
@@ -9,10 +9,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/receivedMessage"
-        android:background="@color/receivedMessageColor"
+        android:background="@drawable/received_message_bg"
         tools:text="this is a received message"
         android:textSize="25sp"
-        android:padding="5dp"
+        android:textColor="#000"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:layout_margin="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
