--- a/app/src/main/res/layout/sent_message_row.xml
+++ b/app/src/main/res/layout/sent_message_row.xml
@@ -9,11 +9,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/sentMessage"
-        android:background="@color/sentMessageColor"
+        android:background="@drawable/sent_message_bg"
         android:textColor="#fff"
         tools:text="this is a sent message"
         android:textSize="25sp"
-        android:padding="5dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:layout_margin="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
