--- a/app/src/main/res/drawable/sent_message_bg.xml
+++ b/app/src/main/res/drawable/sent_message_bg.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <gradient android:startColor="#00b0ff"
-        android:endColor="#039fe6"
-        android:angle="45"/>
+    <gradient android:startColor="#0082FF"
+        android:endColor="#0091ea"
+        android:angle="90"/>
     <corners android:radius="145dp"/>
 </shape>
