--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -9,8 +9,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,111 +24,116 @@
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#efebe9">
+                android:background="#fcfcfc"
+                >
 
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/profileImg_IV"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="30dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.498"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@color/colorAccent" />
 
-            <LinearLayout
-                android:id="@+id/llll"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginBottom="25dp"
-                android:background="@color/colorPrimary"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="@+id/addContainer"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profileImg_IV"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="30dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:src="@color/colorAccent" />
-
-            <TextView
-                android:id="@+id/profileName_TV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="15dp"
-                android:textColor="#fff"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/profileImg_IV"
-                tools:text="@string/ahmedkhaled" />
-
-
-            <TextView
-                android:id="@+id/profileBio_TV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#fff"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/profileName_TV"
-                tools:text="@string/helloworld" />
-
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/addContainer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:cardElevation="2dp"
-                app:cardUseCompatPadding="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/profileBio_TV">
-
-                <LinearLayout
+                <TextView
+                    android:id="@+id/profileName_TV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="#fff"
-                    android:orientation="horizontal"
-                    android:padding="7dp">
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="15dp"
+                    android:textColor="#000"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/profileImg_IV"
+                    tools:text="@string/ahmedkhaled" />
+
+
+                <TextView
+                    android:id="@+id/profileBio_TV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/profileName_TV"
+                    app:layout_constraintBottom_toTopOf="@+id/add_container"
+                    app:layout_goneMarginBottom="10dp"
+                    tools:text="@string/helloworld" />
+
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/add_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintEnd_toStartOf="@+id/message_contianer"
+                    app:layout_constraintTop_toBottomOf="@id/profileBio_TV"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginRight="5dp">
 
                     <Button
                         android:id="@+id/addFriend_BU"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="#c62828"
-                        android:text="@string/add"
-                        android:textAllCaps="false"
-                        android:textColor="#fff"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginRight="5dp"
+                        android:background="@null"
                         android:paddingEnd="5dp"
                         android:paddingStart="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginRight="5dp" />
+                        android:text="@string/add"
+                        android:textAllCaps="false"
+                        android:textColor="#000" />
+                </android.support.v7.widget.CardView>
 
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/message_contianer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    app:layout_constraintStart_toEndOf="@+id/add_container"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/profileBio_TV"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="5dp">
 
                     <Button
                         android:id="@+id/message_BU"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="#c62828"
+                        android:background="@null"
+                        android:paddingEnd="5dp"
+                        android:paddingStart="5dp"
                         android:text="message"
                         android:textAllCaps="false"
-                        android:textColor="#fff"
-                        android:paddingEnd="5dp"
-                        android:paddingStart="5dp" />
+                        android:textColor="#000" />
+                </android.support.v7.widget.CardView>
 
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
 
             </android.support.constraint.ConstraintLayout>
 
+            <android.support.v7.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_collapseMode="pin"
+                android:id="@+id/profileToolbar">
 
+            </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
 
 
