--- a/app/src/main/res/layout/activity_messages_list.xml
+++ b/app/src/main/res/layout/activity_messages_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     tools:context="com.ahmdkhled.wechat.activities.MessagesListActivity">
 
     <android.support.v7.widget.RecyclerView
