add notification fragment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         app:tabSelectedTextColor="#ffffff"
         app:tabTextColor="@color/tabColor"
         app:tabIndicatorColor="#fff"
+        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
         android:background="@color/colorPrimary"/>
 
     <android.support.v4.view.ViewPager
